# Youtube_Downloader2.1

./: README.md  Youtube_Downloader.code-workspace  config_manager.py  history_manager.py  queue_manager.py  requirements-dev.txt  requirements.txt  shared_text.txt  youtube_downloader.py
.devcontainer/: devcontainer.json  requirements-dev.txt
.github/workflows/: .pre-commit-config.yaml  pyproject.toml  python-app.yml
